# songs-gen

./: .env.example  .gitignore  .syncignore  CLAUDE.md  COVER_GENERATOR_IMPLEMENTATION.md  DEPLOYMENT_GUIDE.md  DOCUMENTATION_ORGANIZED.md  FINAL_DOCUMENTATION_STRUCTURE.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_VERIFIED.md  PHASES_COMPLETE.md  PHASE_1_COMPLETE.md  PHASE_2A_IMPLEMENTATION_SUMMARY.md  PHASE_2B_IMPLEMENTATION.md  PROJECT_COMPLETION_SUMMARY.md  QUICK_START.md  README.md  SECURITY_AUDIT_REPORT.md  docker-compose.yml  homelab.yaml  pyproject.toml
.claude/: project.json  settings.local.json
.claude/agents/: code-implementer.md  code-reviewer.md  database-migration-specialist.md  deployment-orchestrator.md  security-auditor.md  solution-architect.md  test-specialist.md  ui-designer.md
.claude/commands/: implement.md
backend/: .coveragerc  .dockerignore  .env.production  API_QUICK_REFERENCE.md  Dockerfile  PHASE_3_IMPLEMENTATION_SUMMARY.md  PHASE_5_YOUTUBE_INTEGRATION_COMPLETE.md  QUICKSTART.md  SUNO_AUTOMATION_SETUP_GUIDE.md  SUNO_INTEGRATION_WARNING.md  YOUTUBE_INTEGRATION_QUICK_START.md  generate_template_samples.py  pytest.ini  requirements.txt  validate_cover_generator.py
backend/app/: __init__.py  config.py  database.py  main.py
backend/app/api/: __init__.py  analytics.py  auth.py  evaluation.py  notifications.py  playlists.py  queue.py  songs.py  studio.py  system.py  templates.py  youtube.py
backend/app/middleware/: __init__.py  security.py
backend/app/models/: __init__.py  evaluation.py  playlist.py  song.py  style_template.py  (+6 more)
backend/scripts/: backup.sh
backend/tests/: IMPLEMENTATION_SUMMARY.md  README.md  TEST_COMMANDS.md  __init__.py  conftest.py  test_auth.py  test_database.py  test_file_watcher.py
docs/: API_ENDPOINTS_STUDIO.md  AUTOMATION_PIPELINE_PLAN.md  COMMAND_WORKFLOWS.md  COVER_GENERATOR_GUIDE.md  INTEGRATION_GUIDE.md  QUICKSTART.md  README.md
docs/archive/: CURRENT-STRUCTURE-ANALYSIS.md  IMPLEMENTATION-SUMMARY.md  STANDALONE-SONGS.md  generated-README.md
docs/examples/: example-songs.md
docs/guides/: QUICK-REFERENCE.md  SONG-CREATION-WORKFLOW.md  faq.md  troubleshooting.md
docs/personas/: persona-library.md  persona-selection-guide.md
docs/reference/: Mastering Suno AI Prompt Engineering: A Comprehensive Guide to AI Music Creation.md  Suno AI Multi-Singer Song Creation Guide.md  style-prompt-library.md
docs/technical/: ARCHITECTURE-RECOMMENDATIONS.md  COMPLETE-PROJECT-STRUCTURE.md  IMPLEMENTATION-GUIDE.md  architecture.md  tools-documentation.md
docs/workflows/: song-creation-workflow.md
frontend/: .dockerignore  Dockerfile  api_client.py  auth.py  index.html  nginx.conf  package.json  requirements.txt  streamlit_app.py  tailwind.config.js  vite.config.ts
frontend/pages/: 1_📊_Dashboard.py  2_📋_Queue.py  3_⭐_Review.py  4_🎬_YouTube.py  5_⚙️_Settings.py
tests/: __init__.py  test_logging.py  test_uuid_generator.py  test_validator.py
tools/: __init__.py  download_test.py  file_watcher.py  menu.py  run_suno.sh  services.sh  suno-worker.service  suno_auth_setup.py  suno_service.sh  suno_upload.py  suno_worker.py  watcher_service.sh
tools/core/: __init__.py  logging_config.py  song_creator.py  uuid_generator.py
tools/legacy/: check-and-update-index.sh  enhanced-duplicate-checker.py  extract-metadata.py  generate-collection-views.py
tools/management/: __init__.py  add_metadata_to_existing.py  atomic_migrator.py  duplicate_checker.py  index_manager.py  metadata_extractor.py
tools/validation/: __init__.py  validator.py
(+98 files in other folders)
